crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-04.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-04 = "val\U0000"
  |                            ^
too few unicode value digits, expected unicode hexadecimal value
